fixed size of overflowing math rows

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -438,3 +438,7 @@ mi {
 mtext {
   @apply prose prose-slate text-lg mx-auto overflow-x-auto
 }
+
+mrow {
+  @apply prose prose-slate text-lg mx-auto overflow-x-auto overflow-y-hidden max-w-[300px] sm:max-w-[500px] xl:max-w-[600px]
+}
